--- a/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayQuestion.cshtml
@@ -5,6 +5,20 @@
 }
 
 <div class="hidden" id="loading"></div>
+<div id="void-popup" class="hidden">
+    <div id="void-authentication">
+        @using (Html.BeginForm("Void", "Exam", FormMethod.Post, new {}))
+        {
+            @Html.HiddenFor(m => m.ExamId)
+            <label for="void-id">Examiner ID:</label>
+            <input type="text" placeholder="Examiner ID" id="void-id"/><br/>
+            <label for="void-password">Password:</label>
+            <input type="text" placeholder="Password" id="void-password"/><br/>
+            <input id="void-confirm" type="submit" value="Confirm" />
+            <input id="void-cancel" type="button" value="Cancel" />
+        }
+    </div>
+</div>
 <div id="ExamContainer">
     <h2>Jump Pilot Authorisation Exam</h2>
     
@@ -68,7 +82,8 @@
     </div>
     
 }
-
+    
+    
 </div>
 
 @section scripts
