--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -10,7 +10,7 @@
 </hgroup>
 
 
-<a href="#"><img alt="add candidate" src="@Url.Content("~/Images/add.png")"/> <span id="add-candidate-link">Add New Candidate</span></a>
+<a href="#" class="button-add">Add Candidate</a>
 
 <hr />
 
