fixed up AJAX marking of question for review - ADAM/ALAN

--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -41,6 +41,7 @@
             <div id="content">
                 <div class="size-wrapper">
                     @RenderBody()
+                    <div id="error-message"></div>
                 </div>
             </div>
             <footer id="footer">
