--- a/APFTestingUI/Views/Shared/_Layout.cshtml
+++ b/APFTestingUI/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
             <div id="content">
                 <div class="size-wrapper">
                     @RenderBody()
+                    <div id="error-message"></div>
                 </div>
             </div>
             <footer id="footer">
