--- a/APFTestingUI/Views/Exam/DisplayError.cshtml
+++ b/APFTestingUI/Views/Exam/DisplayError.cshtml
@@ -3,6 +3,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Sorry there was an error :( (Josh! what are you doing?)</h2>
+<h1>Error</h1>
 
 <p>@ViewBag.error</p>
