--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -55,6 +55,7 @@
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/Scripts/global.js")
+    @Scripts.Render("~/Scripts/jquery.colorbox-min.js")
     @RenderSection("scripts", required: false)
 
 </body>
