--- a/APFTestingUI/Views/Error/ServerError.cshtml
+++ b/APFTestingUI/Views/Error/ServerError.cshtml
@@ -8,4 +8,4 @@
     Sorry, an error occurred while processing your request.
 </h3>
 
-<div class="validation-summary-errors">@ViewBag.ExceptionMessage</div>
+<div>@ViewBag.ExceptionMessage</div>
