--- a/APFTestingUI/Views/Exam/Start.cshtml
+++ b/APFTestingUI/Views/Exam/Start.cshtml
@@ -1,21 +1,35 @@
-﻿@{
-    ViewBag.Title = "Exam Start";
-}
-<div id="ExamContainer">
+﻿@model APFTestingUI.Models.Exam.Instructions
 
-    <h2>Exam Instructions</h2>
+@{
+    ViewBag.Title = "Instructions";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
+<div id="ExamContainer">
     
-    <ul>
-        <li>The exam consists of 30 questions.</li>
-        <li>You will have a time limit of 60 mins to complete the exam.</li>
+    <h1>Instructions</h1>
+
+    <ul id="exam-instructions">
+        <li>The exam consists of @Model.NumberOfQuestions questions.</li>
+        @if (Model.TimeLimit == 0)
+        {
+            <li>There is no time limit for this exam.</li>
+        }
+        else
+        {
+            <li>You will have a time limit of @Model.TimeLimit minutes to complete the exam.</li>
+        }
+        <li>You will need a score of @Model.PassMark % in order to pass.</li>
         <li>Each question has only one correct answer <strong><em>UNLESS</em></strong> stated otherwise in the question.</li>
-        <li>You may mark questions for review</li>
-        <li>Once all questions have been answered a summary page will be displayed. From here you can go back and alter any answer, and marked questions will be highlighted.</li>
+        <li>You can mark questions for review and return to them later.</li>
+        <li>Once all questions have been answered a summary page will be displayed. From here you can go back to any question, and marked questions will be highlighted.</li>
         <li>Good luck!</li>
     </ul>
+    <br />
+    <p>@Html.ActionLink("Start Exam", "FirstQuestion", new { examId = Model.ExamId }, new { @class = "button"})</p>
 
-    @*<p><button class="button" type="button" onclick="window.location.assign('@Url.Action("FirstQuestion", new { examId = @ViewBag.ExamId })')">Start Exam</button></p>*@
-    <p>@Html.ActionLink("Start Exam", "FirstQuestion", new { examId = @ViewBag.ExamId }, new { @class = "button"})</p>
+    <br />
     <p><strong style="color:red;">Remove</strong> @Html.ActionLink("Exam Summary", "Summary", new { examId = @ViewBag.ExamId }) @Html.ActionLink("Exam Result", "Result", new { examId = @ViewBag.ExamId })</p>
 
 </div>
