--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -37,7 +37,7 @@
                     
                     @if (candidate.ExamNullOrCreated)
                     {
-                        <button class="examinerButton" type="button" onclick="window.location.assign('@Url.Action("Instructions", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id })')">
+                        <button class="examinerButton" type="button" onclick="window.location.assign('@Url.Action("Start", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id })')">
                             Start Exam
                         </button>
                     }
@@ -49,7 +49,7 @@
                     }
                     else if (candidate.TheoryComponentFailed)
                     {
-                        <button class="examinerButton" type="button" onclick="window.location.assign('@Url.Action("Instructions", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id })')">
+                        <button class="examinerButton" type="button" onclick="window.location.assign('@Url.Action("Start", "Exam", new { examinerId = Model.ExaminerId, candidateId = candidate.Id })')">
                             Retake Exam
                         </button>
                     }
