--- a/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
+++ b/APFTestingUI/Views/Shared/_QuestionLayout.cshtml
@@ -41,7 +41,9 @@
             <div id="content">
                 <div class="size-wrapper">
                     @RenderBody()
-                    <div id="error-message"></div>
+                    <div class="hidden">
+                        <div id="error-message"></div>
+                    </div>
                 </div>
             </div>
             <footer id="footer">
